fixed image overlaps

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,4 +1,4 @@
-.container {
+.container-home {
     background-image: url(../assets/nightsky.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
