--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,4 +1,4 @@
-.container {
+.container-login {
   background-image: url(../assets/nighthopper.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
